# CGameOfLife

./: History.md  README.md  benchmark.sh  main.py  pyproject.toml
app/: config.py  context.py  events.py  gallery.py  gallery_state.py  grid.py  input_handler.py  main.py  patterns.py  renderer.py  simulation_state.py  state.py  state_machine.py  ui.py  viewport.py
